# deb_scripts

./: LICENSE  README.md  install.sh  main.py  pyproject.toml
.github/workflows/: pylint.yml
app/interfaces/cli/: cli.py  menu.py  run.py
app/interfaces/interactive/: bbr.py  docker.py  fail2ban.py  run.py  uv.py
app/services/: bbr.py  docker.py  fail2ban.py  ufw.py  uv.py
app/services/distro/arch/: bbr.py  docker.py  fail2ban.py  ufw.py  uv.py
app/services/distro/debian/: bbr.py  docker.py  fail2ban.py  ufw.py
app/services/distro/wrt/: bbr.py  docker.py  fail2ban.py  ufw.py
app/utils/: sysinfo_utils.py
